[project]
name = "prompt-components"
version = "0.1.0"
description = "A better library for prompt management."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.setuptools]
packages = ["prompt_components"]

[tool.setuptools.exclude-package-data]
"*" = ["prompt_components/tests/*"]
